added path again

--- a/OneDrive/Desktop/web_design/portfolio/index.html
+++ b/OneDrive/Desktop/web_design/portfolio/index.html
@@ -70,7 +70,7 @@
 
                 </div>
                 <div class="col-md-6 text-center">
-                    <img src="/portfolio/images/logith.jpg" alt="Logith" class="img-fluid w-50" />
+                    <img src="./images/logith.jpg" alt="Logith" class="img-fluid w-50" />
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
             <div class="row text-center">
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/portfolio/images/html.png" class="card-img-top w-25 m-auto pt-4" alt="html">
+                        <img src="./images/html.png" class="card-img-top w-25 m-auto pt-4" alt="html">
                         <div class="card-body">
                             <h5 class="card-title">HTML</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -96,7 +96,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/portfolio/images/css2.png" class="card-img-top w-25 m-auto  pt-4" alt="css">
+                        <img src="./images/css2.png" class="card-img-top w-25 m-auto  pt-4" alt="css">
                         <div class="card-body">
                             <h5 class="card-title">CSS</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/portfolio/images/javascript.png" class="card-img-top w-25 m-auto pt-4"
+                        <img src="./images/javascript.png" class="card-img-top w-25 m-auto pt-4"
                             alt="javascript">
                         <div class="card-body">
                             <h5 class="card-title">JAVASCRIPT</h5>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card">
-                        <img src="/portfolio/images/java.png" class="card-img-top w-25 m-auto pt-4" alt="java">
+                        <img src="./images/java.png" class="card-img-top w-25 m-auto pt-4" alt="java">
                         <div class="card-body">
                             <h5 class="card-title">JAVA</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
